--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = themes/jane
 	url = https://github.com/xianmin/hugo-theme-jane.git
 	branch = master
+[submodule "public"]
+	path = public
+	url = git@github.com:Chanrom/chanrom.github.io.git
+	branch = master
